Fix answer overflow issue

--- a/src/components/Answer/SingleAnswer.module.scss
+++ b/src/components/Answer/SingleAnswer.module.scss
@@ -8,6 +8,7 @@
 
   .answer-text {
     margin: 16px;
+    overflow-wrap: break-word;
   }
 
   .edit-form {
